# aws-llm

./: .gitignore  LICENSE  Makefile  README.md
extract/: pyproject.toml
extract/extract_lib/: __init__.py  client.py  cloudwatch_metrics.py  config.py  extract_batch.py  features.py  iceberg_writer.py  runner.py  schema.py  spot_watcher.py  sqs_worker.py
infra/bootstrap/: backend.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/bootstrap/modules/dispatch/: main.tf  outputs.tf  variables.tf
infra/bootstrap/modules/iam/: main.tf  outputs.tf  variables.tf
infra/bootstrap/modules/query/: main.tf  outputs.tf  variables.tf
infra/bootstrap/modules/storage/: main.tf  outputs.tf  variables.tf
infra/runtime/: backend.tf  bootstrap-shim.sh  main.tf  outputs.tf  user_data.tftpl  variables.tf  versions.tf
infra/runtime/ansible/: ansible.cfg  playbook.yml  requirements.yml  run.sh
infra/runtime/ansible/group_vars/: all.yml
infra/runtime/ansible/inventory/: local.yml
infra/runtime/modules/compute/: main.tf  outputs.tf  variables.tf
infra/runtime/modules/network/: main.tf  outputs.tf  variables.tf
infra/runtime/modules/observability/: main.tf  (+2 more)
lambda/dispatch/: handler.py  requirements.txt
lambda/query/: handler.py  requirements.txt  templates.py
test/: go.mod  go.sum  lifecycle_test.go
test/buildcheck/: buildcheck.go
test/experiments/: concurrency_bench.go  constrained_decoding.go  full_corpus.go  prefix_cache.go  reasoning_quality.go  spot_interrupt.go  truncation_ab.go
test/helpers/: iceberg.go  lambda.go  s3.go  terraform.go  vllm.go
(+22 files in other folders)
