[project]
name = "aws-llm-extract"
version = "0.0.1"
description = "AWS Nemo extraction pipeline (Layer C) — port of ~/call-logs/extract_lib"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.50",
    "pyiceberg[pyarrow]>=0.7",
    "boto3>=1.35",
    "tenacity>=8.2",
    "pydantic>=2.7",
    "pyarrow>=17",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
aws-llm-extract = "extract_batch:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["extract_batch"]

[tool.setuptools.packages.find]
include = ["extract_lib*"]
